--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -10,7 +10,7 @@
 
 <body>
   <div>
-    <h1>QR Code Scan Form.</h1>
+    <h1>QR Code Scan Form raw.</h1>
 
     <!-- <div style="width: 500px" id="reader"></div> -->
     <div id="qr-reader" style="width: 600px"></div>
