--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -25,6 +25,9 @@
     <script>
         function onScanSuccess(decodedText, decodedResult) {
             console.log(`Code scanned = ${decodedText}`, decodedResult);
+            html5QrcodeScanner.clear();
+            document.getElementById('id_isbn').value = decodedText;
+           // document.getElementById('form_isbn').submit();
         }
         var html5QrcodeScanner = new Html5QrcodeScanner(
             "qr-reader", { fps: 10, qrbox: 250 });
