--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -3,38 +3,73 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 
 <body>
-  <div>
-    <h1>QR Code Scan Form raw.</h1>
+    <div>
+        <h1>QR Code Scan Form raw.</h1>
 
-    <!-- <div style="width: 500px" id="reader"></div> -->
-    <div id="qr-reader" style="width: 600px"></div>
-   
-    <form id="form_isbn" method="post">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="submit" value="Submit">
-    </form>
+        <!-- <div style="width: 500px" id="reader"></div> -->
+        <div id="qr-reader" style="width: 600px"></div>
 
-    <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
-    <script>
-        function onScanSuccess(decodedText, decodedResult) {
-            console.log(`Code scanned = ${decodedText}`, decodedResult);
-            html5QrcodeScanner.clear();
-            document.getElementById('id_isbn').value = decodedText;
-           // document.getElementById('form_isbn').submit();
-        }
-        var html5QrcodeScanner = new Html5QrcodeScanner(
-            "qr-reader", { fps: 10, qrbox: 250 });
-        html5QrcodeScanner.render(onScanSuccess);
-       
-    </script>
-  </div>
+        <form id="form_isbn" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Submit">
+        </form>
+
+        <script src="https://unpkg.com/html5-qrcode@2.0.9/dist/html5-qrcode.min.js"></script>
+        <script>/**
+    function onScanSuccess(decodedText, decodedResult) {
+        console.log(`Code scanned = ${decodedText}`, decodedResult);
+        html5QrcodeScanner.clear();
+        document.getElementById('id_isbn').value = decodedText;
+       // document.getElementById('form_isbn').submit();
+    }
+    var html5QrcodeScanner = new Html5QrcodeScanner(
+        "qr-reader", { fps: 10, qrbox: 250 });
+    html5QrcodeScanner.render(onScanSuccess);
+   **/
+
+
+            Html5Qrcode.getCameras().then(devices => {
+                if (devices && devices.length) {
+                    var cameraId = device[0].id;
+                }
+            }).catch(err => {
+                //err
+            });
+
+            const html5QrCode = new Html5Qrcode("reader", /* verbose= */ true);
+
+            const qrCodeSuccessCallback = (decodedText, decodedResult) => {
+                /* handle success */
+                console.log(`Code scanned = ${decodedText}`, decodedResult);
+                html5QrcodeScanner.clear();
+                document.getElementById('id_isbn').value = decodedText;
+             // document.getElementById('form_isbn').submit();
+            };
+            const config = { fps: 10, qrbox: { width: 250, height: 250 } };
+
+            // If you want to prefer front camera
+           // html5QrCode.start({ facingMode: "user" }, config, qrCodeSuccessCallback);
+
+            // If you want to prefer back camera
+           // html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
+
+            // Select front camera or fail with `OverconstrainedError`.
+           // html5QrCode.start({ facingMode: { exact: "user" } }, config, qrCodeSuccessCallback);
+
+            // Select back camera or fail with `OverconstrainedError`.
+            html5QrCode.start({ facingMode: { exact: "environment" } }, config, qrCodeSuccessCallback);
+
+            html5QrCode.start({ deviceId: { exact: cameraId} }, config, qrCodeSuccessCallback);
+
+        </script>
+    </div>
 
 </body>
 
