--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -12,8 +12,8 @@
     <div>
         <h1>QR Code Scan Form raw.</h1>
 
-        <!-- <div style="width: 500px" id="reader"></div> -->
-        <div id="qr-reader" style="width: 600px"></div>
+        <div style="width: 500px" id="reader"></div>
+        <!-- <div id="qr-reader" style="width: 600px"></div> -->
 
         <form id="form_isbn" method="post">
             {% csrf_token %}
@@ -48,7 +48,7 @@
             const qrCodeSuccessCallback = (decodedText, decodedResult) => {
                 /* handle success */
                 console.log(`Code scanned = ${decodedText}`, decodedResult);
-                html5QrcodeScanner.clear();
+               // html5QrcodeScanner.clear();
                 document.getElementById('id_isbn').value = decodedText;
              // document.getElementById('form_isbn').submit();
             };
@@ -66,7 +66,7 @@
             // Select back camera or fail with `OverconstrainedError`.
             html5QrCode.start({ facingMode: { exact: "environment" } }, config, qrCodeSuccessCallback);
 
-            html5QrCode.start({ deviceId: { exact: cameraId} }, config, qrCodeSuccessCallback);
+           // html5QrCode.start({ deviceId: { exact: cameraId} }, config, qrCodeSuccessCallback);
 
         </script>
     </div>
