--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -58,13 +58,13 @@
            // html5QrCode.start({ facingMode: "user" }, config, qrCodeSuccessCallback);
 
             // If you want to prefer back camera
-           // html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
+            html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
 
             // Select front camera or fail with `OverconstrainedError`.
            // html5QrCode.start({ facingMode: { exact: "user" } }, config, qrCodeSuccessCallback);
 
             // Select back camera or fail with `OverconstrainedError`.
-            html5QrCode.start({ facingMode: { exact: "environment" } }, config, qrCodeSuccessCallback);
+            //html5QrCode.start({ facingMode: { exact: "environment" } }, config, qrCodeSuccessCallback);
 
            // html5QrCode.start({ deviceId: { exact: cameraId} }, config, qrCodeSuccessCallback);
 
