--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -55,10 +55,10 @@
             const config = { fps: 10, qrbox: { width: 250, height: 250 } };
 
             // If you want to prefer front camera
-           // html5QrCode.start({ facingMode: "user" }, config, qrCodeSuccessCallback);
+            //html5QrCode.start({ facingMode: "user" }, config, qrCodeSuccessCallback);
 
             // If you want to prefer back camera
-            html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
+            //html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
 
             // Select front camera or fail with `OverconstrainedError`.
            // html5QrCode.start({ facingMode: { exact: "user" } }, config, qrCodeSuccessCallback);
@@ -67,6 +67,7 @@
             //html5QrCode.start({ facingMode: { exact: "environment" } }, config, qrCodeSuccessCallback);
 
            // html5QrCode.start({ deviceId: { exact: cameraId} }, config, qrCodeSuccessCallback);
+           html5QrCode.start({ deviceId: cameraId}, config, qrCodeSuccessCallback);
 
         </script>
     </div>
