--- a/templates/scan_form2.html
+++ b/templates/scan_form2.html
@@ -44,22 +44,26 @@
                 //err
             });
             **/
-            const html5QrCode = new Html5Qrcode("reader", /* verbose= */ true);
+            const html5QrCode = new Html5Qrcode("reader", /* verbose= */ false);
 
             const qrCodeSuccessCallback = (decodedText, decodedResult) => {
                 /* handle success */
                 console.log(`Code scanned = ${decodedText}`, decodedResult);
-               // html5QrcodeScanner.clear();
+               // html5QrCode.clear();
+                html5QrCode.stop();
                 document.getElementById('id_isbn').value = decodedText;
              // document.getElementById('form_isbn').submit();
             };
+
             const config = { fps: 10, qrbox: { width: 250, height: 250 } };
 
             // If you want to prefer front camera
             //html5QrCode.start({ facingMode: "user" }, config, qrCodeSuccessCallback);
 
             // If you want to prefer back camera
-            html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
+            html5QrCode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback).catch((err=>{
+                console.log("failed to start")
+            }));
 
             // Select front camera or fail with `OverconstrainedError`.
            // html5QrCode.start({ facingMode: { exact: "user" } }, config, qrCodeSuccessCallback);
